data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1260.wast
;; 1. **Test Imported Function Inside Loop Start**:    - **Description**: A WebAssembly module (A) imports a function from another module (B). Inside module A, this imported function is called within a `loop` instruction. Validate that the operand stack is correctly managed when control transitions between the loop in module A and the imported function in module B.    - **Constraint**: Ensure the loop reinitializes correctly if the control returns from the imported function.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (result i32)))
    (func $test_loop
      (loop (result i32)
        (call $imported_func)
        (br 0)
      )
    )
  )
  "type mismatch"
)